wip mod and single key explorer

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -60,5 +60,6 @@
   "conversionLog": {
     "done": "Conversion terminée",
     "starting": "Conversion commencée"
-  }
+  },
+  "addTradBtn": "Ajouter des traductions"
 }
